pd-0000: Apply linters

--- a/backend/vendi-docker/docker-compose.yml
+++ b/backend/vendi-docker/docker-compose.yml
@@ -4,6 +4,8 @@ services:
       context: ../
       dockerfile: vendi-docker/Dockerfile
       target: dev
+    command:
+      - ""
     container_name: vendi-service
     ports:
       - "8040:8080"
