--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.15.2"
 djangorestframework-simplejwt = "^5.3.1"
 drf-yasg = "^1.21.8"
 pydantic = "^2.9.2"
+gunicorn = "^23.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
