--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework-simplejwt = "^5.3.1"
 drf-yasg = "^1.21.8"
 pydantic = "^2.9.2"
 gunicorn = "^23.0.0"
+whitenoise = "^6.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
