main: Update heroku.yml.

--- a/heroku.yml
+++ b/heroku.yml
@@ -2,4 +2,4 @@ build:
   docker:
     web: backend/Dockerfile.heroku
 run:
-  web: gunicorn app.wsgi:application --bind 0.0.0.0:$PORT
+  web: gunicorn backend.app.wsgi:application --bind 0.0.0.0:$PORT
