--- a/backend/Dockerfile.heroku
+++ b/backend/Dockerfile.heroku
@@ -15,14 +15,6 @@ ENV VIRTUAL_ENV="${PREFIX}/venv/"
 ENV PATH="${PREFIX}/venv/bin:$PATH"
 ENV HOME=${PREFIX}
 
-ENV DJANGO_PORT 8080
-
-COPY vendi-docker/docker-entrypoint.sh /docker-entrypoint.sh
-
-RUN chmod u+x docker-entrypoint.sh
-
-ENTRYPOINT [ "/docker-entrypoint.sh" ]
-
 WORKDIR ${PREFIX_APP}
 
 FROM base AS deps
@@ -46,4 +38,5 @@ COPY . ${PREFIX_APP}
 RUN poetry install --without dev --no-root
 
 RUN python manage.py collectstatic --noinput --clear
-CMD gunicorn vendi.app.wsgi:application --bind 0.0.0.0:$PORT
+
+CMD gunicorn app.wsgi:application --bind 0.0.0.0:$PORT
