--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ whitenoise = "^6.7.0"
 ruff = "^0.7.0"
 mypy = "^1.12.1"
 pre-commit = "^4.0.1"
+pytest = "^8.3.3"
 
 [build-system]
 requires = ["poetry-core"]
