--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,8 @@ drf-yasg = "^1.21.8"
 pydantic = "^2.9.2"
 gunicorn = "^23.0.0"
 whitenoise = "^6.7.0"
+boto3 = "^1.35.46"
+structlog = "^24.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
