--- a/backend/vendi-docker/docker-compose.yml
+++ b/backend/vendi-docker/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       DJANGO_SUPERUSER_USERNAME: admin
       DJANGO_SUPERUSER_EMAIL: admin@gmail.com
       DJANGO_SUPERUSER_PASSWORD: pass
+      DJANGO_SETTINGS_MODULE: app.settings
 
       ENVIRONMENT: local
     env_file:
