--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -4,7 +4,9 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
+        exclude: static
       - id: check-yaml
+        exclude: static
       - id: check-added-large-files
       - id: check-ast
       - id: check-case-conflict
