--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,9 +4,9 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
-        exclude: static
+        exclude: mspy_vendi/static
       - id: check-yaml
-        exclude: static
+        exclude: mspy_vendi/static
       - id: check-added-large-files
       - id: check-ast
       - id: check-case-conflict
