--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ gunicorn = "^23.0.0"
 whitenoise = "^6.7.0"
 boto3 = "^1.35.46"
 structlog = "^24.4.0"
+django-cors-headers = "^4.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
