--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ taskiq = {extras = ["zmq"], version = "^0.11.7"}
 httpx = "^0.27.2"
 tenacity = "^9.0.0"
 pyzmq = "^26.2.0"
+sentry-sdk = "^2.18.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.7.0"
