--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ httpx = "^0.27.2"
 tenacity = "^9.0.0"
 pyzmq = "^26.2.0"
 sentry-sdk = "^2.18.0"
+pandas = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.7.0"
