feature: Add SMTP server + support

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,7 @@ SENTRY_NAYAX_CONSUMER_DSN=ABC
 SENTRY_DATAJAM_CRONJOB_DSN=ABC
 ENVIRONMENT=local
 
-MAILGUN_STG=ABC
-MALIGUN_PRD=ABC
+MAILGUN_DOMAIN_NAME=vendi-portal.com
+MAILGUN_REGION=eu
+MAILGUN_API_KEY=abc
+FRONTEND_DOMAIN=vendi-portal.com
