--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ tenacity = "^9.0.0"
 pyzmq = "^26.2.0"
 sentry-sdk = "^2.18.0"
 pandas = "^2.2.3"
+openpyxl = "^3.1.5"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.7.0"
