--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ pyzmq = "^26.2.0"
 sentry-sdk = "^2.18.0"
 pandas = "^2.2.3"
 openpyxl = "^3.1.5"
+taskiq-redis = "^1.0.2"
+redis = "^5.2.0"
+xlsxwriter = "^3.2.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.7.0"
