--- a/vendi-docker/docker-compose.yml
+++ b/vendi-docker/docker-compose.yml
@@ -1,27 +1,32 @@
+x-common-service: &common-service
+  build:
+    context: ../
+    dockerfile: vendi-docker/Dockerfile
+    target: dev
+  env_file:
+    - ../.env
+  environment:
+    DATABASE_HOST: vendi-db
+    DATABASE_PORT: 5432
+    DATABASE_USER: vendi-user
+    DATABASE_PASSWORD: vendi-password
+    DATABASE_DB: vendi-db
+
+    ENVIRONMENT: local
+  depends_on:
+    vendi-db:
+      condition: service_healthy
+    vendi-redis:
+      condition: service_healthy
+  volumes:
+    - ../:/backend/vendi
+
 services:
   vendi-service:
-    build:
-      context: ../
-      dockerfile: vendi-docker/Dockerfile
-      target: dev
+    <<: *common-service
     container_name: vendi-service
     ports:
       - "8040:8080"
-    volumes:
-      - ../:/backend/vendi
-    environment:
-      DATABASE_HOST: vendi-db
-      DATABASE_PORT: 5432
-      DATABASE_USER: vendi-user
-      DATABASE_PASSWORD: vendi-password
-      DATABASE_DB: vendi-db
-
-      ENVIRONMENT: local
-    env_file:
-      - ../.env
-    depends_on:
-      vendi-db:
-        condition: service_healthy
 
   vendi-db:
     image: postgres:16-alpine
@@ -45,3 +50,29 @@ services:
       interval: 5s
       timeout: 5s
       retries: 50
+
+  vendi-redis:
+    image: redis:7.4-rc2-alpine
+    container_name: vendi-redis
+    hostname: vendi-redis
+    expose:
+      - 6379
+    ports:
+      - "6364:6379"
+    volumes:
+      - cache:/data
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      start_period: 5s
+      interval: 5s
+      timeout: 5s
+      retries: 50
+
+  vendi-worker:
+    <<: *common-service
+    container_name: vendi-worker
+    command: vendi_worker
+
+volumes:
+  cache:
+    driver: local
