--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ SENTRY_NAYAX_CONSUMER_DSN=ABC
 SENTRY_DATAJAM_CRONJOB_DSN=ABC
 ENVIRONMENT=local
 
-MAILGUN_DOMAIN_NAME=vendi-portal.com
+MAILGUN_DOMAIN_NAME=replies.client-vendi.com
 MAILGUN_REGION=eu
 MAILGUN_API_KEY=abc
-FRONTEND_DOMAIN=vendi-portal.com
+FRONTEND_DOMAIN=www.vendi-client.com
