--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ fastapi-debug-toolbar = "0.6.3"
 granian = "1.5.1"
 uvicorn = "0.30.3"
 phonenumbers = "^8.13.48"
-taskiq = {extras = ["zmq"], version = "^0.11.7"}
+taskiq = {extras = ["zmq"], version = "0.11.7"}
 httpx = "^0.27.2"
 tenacity = "^9.0.0"
 pyzmq = "^26.2.0"
