--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ pydantic-settings = "2.3.4"
 boto3 = "^1.35.46"
 structlog = "^24.4.0"
 sqlalchemy = "2.0.31"
-asyncpg = "0.29.0"
+asyncpg = "^0.30.0"
 fastapi = "0.111.0"
 fastapi-pagination = "0.12.26"
 fastapi-filter = "2.0.0"
